fix: fix pipelines bug
